# mib/resource/util_fun.py
@@ -1,0 +1,46 @@
+from flask import request, jsonify
+from mib.resource.user_manager import UserManager
+
+
+
+def get_user(user_id):
+    """
+    Get a user by its current id.
+    :param user_id: user it
+    :return: json response
+    """
+    user = UserManager.retrieve_by_id(user_id)
+    if user is None:
+        response = {'status': 'User not present'}
+        return jsonify(response), 404
+
+    return jsonify(user.serialize()), 200
+
+
+def get_user_by_email(user_email):
+    """
+    Get a user by its current email.
+    :param user_email: user email
+    :return: json response
+    """
+    user = UserManager.retrieve_by_email(user_email)
+    if user is None:
+        response = {'status': 'User not present'}
+        return jsonify(response), 404
+
+    return jsonify(user.serialize()), 200
+
+
+def delete_user(user_id):
+    """
+    Delete the user with id = user_id.
+    :param user_id the id of user to be deleted
+    :return json response
+    """
+    UserManager.delete_user_by_id(user_id)
+    response_object = {
+        'status': 'success',
+        'message': 'Successfully deleted',
+    }
+
+    return jsonify(response_object), 202
